Removed overlap removal from the DoseFormQueryRefiner